@@ -8,13 +8,19 @@ fi
 
 if ( test "$1" = "mysql" )
 then
-	export LD_PRELOAD=/usr/local/firstworks/lib/libmysql51sqlrelay.so
+	export LD_PRELOAD=/usr/local/firstworks/lib/libmysql51sqlrelay.so.4
 	./mysql
 fi
 
+if ( test "$1" = "mysqldatetodatetime" )
+then
+	export LD_PRELOAD=/usr/local/firstworks/lib/libmysql51sqlrelay.so.4
+	export SQLR_MYSQL_MAP_DATE_TO_DATETIME=yes
+	./mysqldatetodatetime
+fi
 
 if ( test "$1" = "postgresql" )
 then
-	export LD_PRELOAD=/usr/local/firstworks/lib/libpqsqlrelay.so
+	export LD_PRELOAD=/usr/local/firstworks/lib/libpqsqlrelay.so.4
 	./postgresql
 fi
